# sendmy

./: .clang-format  .gitignore  README.md
docs/: espsend.md  esptag.md  midterm-report.md  progress-tracker.md  sendmy.md
docs/midterm/: midterm-paper.typ  ref.yml
examples/espsend/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/espsend/main/: CMakeLists.txt  espsend.c  idf_component.yml
examples/espsend/scripts/: .gitignore  check_carriers.py  fetch_reports.py  gen_nvs_csv.py  gen_seed.py  scan_findmy.py
examples/esptag/: .gitignore  CMakeLists.txt  DEVELOPING.md  README.md  sdkconfig.defaults
examples/esptag/components/micro_ecc/: CMakeLists.txt  curve-specific.inc  types.h  uECC.c  uECC.h
examples/esptag/main/: CMakeLists.txt  Kconfig.projbuild  ble_adv.c  ble_adv.h  common.h  crypto.c  crypto.h  idf_component.yml  main.c  nvs_store.c  nvs_store.h  tag.c  tag.h
examples/esptag/scripts/: derive_keys.py  esptag_const.py  fetch_reports.py  gen_seed.py  scan_findmy.py
sendmy_carrier/: CMakeLists.txt  README.md  idf_component.yml  p224.c  p224.h  sendmy_carrier.c  sendmy_carrier.h
sendmy_link/: CMakeLists.txt  README.md  idf_component.yml  sendmy_link.c  sendmy_link.h
sendmy_transport/: CMakeLists.txt  README.md  idf_component.yml  sendmy_transport.c  sendmy_transport.h
